tests/neg/parsing-unbalance-fence.stk
fun test =
  (1 + 3 * 5 p

fun bar = 7 + 9  // error
